--- a/Project.ipynb
+++ b/Project.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5051,7 +5051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "ocKKSGd0oW8k"
       },
@@ -5069,7 +5069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "EdzKS8K7oW8l"
       },
@@ -5093,7 +5093,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "cFm2am3VoW8l"
       },
@@ -5104,7 +5104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "KYFsgeNGoW8l",
         "outputId": "18e288d9-2144-453a-943a-da9c5cc514ba",
@@ -5506,7 +5506,7 @@
       "metadata": {
         "id": "Fs6xPdHUpI-h"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5522,7 +5522,7 @@
           "height": 423
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5931,7 +5931,7 @@
       "metadata": {
         "id": "PcU3dM2iqWHY"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5961,7 +5961,7 @@
           "height": 447
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5998,7 +5998,7 @@
           "height": 423
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6054,7 +6054,7 @@
       "metadata": {
         "id": "tgdhp4kAtX_s"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6067,7 +6067,7 @@
       "metadata": {
         "id": "TnBfjMDsPXH1"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6085,7 +6085,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6111,7 +6111,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6137,7 +6137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6166,7 +6166,7 @@
           "height": 447
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6193,7 +6193,61 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Convolutiol NN"
+        "# Simple NN (Only dense layers)"
+      ],
+      "metadata": {
+        "id": "pGzsb-03GDbM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+        "    tf.keras.layers.Dense(128, activation='relu'),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "ZmUJbNLtGC85"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Convolutional NN"
+      ],
+      "metadata": {
+        "id": "_idVpiCXGcHp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = tf.keras.models.Sequential([\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 3)),\n",
+        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dense(10, activation='softmax')\n",
+        "])\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "cYffTI0sGSnH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Convolutional NN w/MaxPooling layers"
       ],
       "metadata": {
         "id": "R-7eTxwkOS-r"
@@ -6222,7 +6276,7 @@
           "height": 440
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6348,7 +6402,7 @@
           "height": 1000
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6378,7 +6432,7 @@
           "height": 792
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6460,7 +6514,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
