--- a/Project.ipynb
+++ b/Project.ipynb
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5050,8 +5050,18 @@
       "source": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This is a supervised machine learning model that takes in labeled data and trains in identifying cloth items based on corresponding groups.\n",
+        "To achieve this, we import various libraries for file access and appending, data manipulation, and machine learning frameworking. Additional numerical and graphing libraries are included."
+      ],
+      "metadata": {
+        "id": "2_rTNBwgf-H1"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ocKKSGd0oW8k"
       },
@@ -5069,7 +5079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "EdzKS8K7oW8l"
       },
@@ -5092,8 +5102,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We define the function \"load_data\" with parameter \"path\" and a string input.\n",
+        "images and labels are arrays for which we place the collected strings. glob.glob, funny as that function sounds, detects png files within subdirectories.\n",
+        "glob.glob randomly finds patterns and uses that to complete its function. Here, glob.glob looks beyond \"path\" which is a root directory that contains the files of interest, with the first /* referring to any directory it immediately detects after path, and the second /* is the subdirectory that contains the png files, of course with .png to properly identify them.\n",
+        "For each png detected, it appens to the images and labels arrays with the data found in the image_path string. To ensure labels get their appropriate data, image_path.split is used with delimiter / to separate the png from the second-to-last element [-2], the folder containing the pngs, whose name refers to the label itself.\n",
+        "\n",
+        "\n",
+        "With this, we load image file paths and labels from a directory and placing them into pd.DataFrame. The dataframe will store the strings into a dictionary."
+      ],
+      "metadata": {
+        "id": "HledlGKn8AJj"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "cFm2am3VoW8l"
       },
@@ -5103,8 +5128,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "We give load_data the path parameter and it stores the path data as a string, inside images_df, the images dataframe.\n",
+        "(path: str)\n",
+        "\n",
+        "\n",
+        "We then see what the function collected by writing images_df."
+      ],
+      "metadata": {
+        "id": "pdJM2nTQFocY"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "KYFsgeNGoW8l",
         "outputId": "b5a6d3f9-c1df-4fcc-dd9c-1b33ac2ccd91",
@@ -5498,6 +5536,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "value_counts is a pandas function that counts the occurence of labels, converting them to integers through the astype method.\n"
+      ],
+      "metadata": {
+        "id": "IPtgPjm9GnVR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "images_df.labels.value_counts()\n",
@@ -5506,7 +5553,7 @@
       "metadata": {
         "id": "Fs6xPdHUpI-h"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5522,7 +5569,7 @@
           "height": 423
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5931,7 +5978,7 @@
       "metadata": {
         "id": "PcU3dM2iqWHY"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5961,7 +6008,7 @@
           "height": 447
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5998,7 +6045,7 @@
           "height": 423
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6054,7 +6101,7 @@
       "metadata": {
         "id": "tgdhp4kAtX_s"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6067,7 +6114,7 @@
       "metadata": {
         "id": "TnBfjMDsPXH1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6085,7 +6132,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6111,7 +6158,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6137,7 +6184,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6166,7 +6213,7 @@
           "height": 447
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6218,7 +6265,7 @@
         },
         "outputId": "3ab0bffa-19ef-4b64-9dd1-6f301985ad0e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6345,7 +6392,7 @@
         },
         "outputId": "d26a1fab-bd1a-4553-e9a5-204112e8d24b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6482,7 +6529,7 @@
           "height": 385
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6600,7 +6647,7 @@
           "height": 1000
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6629,7 +6676,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6697,7 +6744,7 @@
           "height": 472
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6717,7 +6764,7 @@
       "metadata": {
         "id": "vcM-SmPMc803"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6732,7 +6779,7 @@
         "id": "mo2f3B4Qoqu-",
         "outputId": "792384a3-ce6e-4252-f3ca-85f1f7730607"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6751,7 +6798,7 @@
       "metadata": {
         "id": "t66lvYjPpdUY"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6767,7 +6814,7 @@
         "id": "qtNS6tdNqM6h",
         "outputId": "ea5dcc7d-f946-4e7d-8e5b-db00ef793621"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7169,7 +7216,7 @@
         "id": "TAFqzJ9Lpq2l",
         "outputId": "6a9da059-24ac-462d-c916-cb286ce587e9"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7221,7 +7268,7 @@
         "id": "wBJ2j1uHpJQy",
         "outputId": "1c48f788-03c7-457f-a52b-24a6528a572e"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7247,7 +7294,7 @@
         "id": "vg0HV7EGpDmz",
         "outputId": "b1158ab1-fe84-4f1b-c635-613ef40d0882"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7273,7 +7320,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7304,7 +7351,7 @@
       "metadata": {
         "id": "rnyqFXdMSy-g"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
